# soft_tracer

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  random_spheres.cpp  simple_sphere.cpp  sphere.cpp  three_spheres.cpp
include/soft_tracer/: app.hpp  camera.hpp  component_array.hpp  dielectric_material.hpp  entitiy.hpp  entity_manager.hpp  hit_result.hpp  hit_system.hpp  interval.hpp  lambertian_material.hpp  material.hpp  metal_material.hpp  ray.hpp  ray_interactions.hpp  ray_trace.hpp  ray_tracer.hpp  renderer.hpp  s_entity_manager.hpp  sphere.hpp  tracer.hpp  utils.hpp  window.hpp
include/soft_tracer/ecs/: component_array.hpp  entitiy.hpp  entity_manager.hpp  s_entity_manager.hpp
src/: CMakeLists.txt  app.cpp  camera.cpp  hit_system.cpp  ray.cpp  ray_interactions.cpp  ray_tracer.cpp  renderer.cpp  tracer.cpp  window.cpp
